--- a/package.json
+++ b/package.json
@@ -38,11 +38,13 @@
     "@mui/icons-material": "latest",
     "@mui/material": "latest",
     "@mui/material-nextjs": "latest",
+    "@mui/x-data-grid": "^7.6.2",
     "clsx": "latest",
     "copy-to-clipboard": "latest",
     "next": "latest",
     "react": "latest",
-    "react-dom": "latest"
+    "react-dom": "latest",
+    "sass": "^1.77.4"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "latest",
